--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "@babel/polyfill": "^7.4.3",
         "@babel/preset-env": "^7.12.11",
         "@babel/preset-react": "^7.12.10",
+        "@reach/combobox": "^0.12.1",
+        "@react-google-maps/api": "^2.1.0",
         "@testing-library/react": "^11.2.2",
         "aws-sdk": "^2.815.0",
         "axios": "^0.21.1",
@@ -51,6 +53,7 @@
         "socket.io-client": "^3.0.4",
         "spiced-pg": "^1.0.4",
         "uid-safe": "^2.1.4",
+        "use-places-autocomplete": "^1.7.1",
         "webpack": "^5.11.0",
         "webpack-cli": "^4.2.0",
         "webpack-dev-server": "^3.11.0"
